# chupo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/chupo/: chevereto.py  cli.py
